# talks

./: README.md  generate_diagrams.sh  pyproject.toml
brum-php-jan-2022/: pyproject.toml  readme.md
brum-php-jan-2022/brefphp/diagrams/: bref_building_something_1_diagram.py  bref_building_something_2_diagram.py  bref_building_something_3_diagram.py  bref_building_something_5_diagram.py  bref_building_something_6_diagram.py  bref_building_something_diagram.py  bref_relationship_1_diagram.py
brum-php-jan-2022/serverless/: basic_1.py  basic_2.py  basic_2_diagram.py  basic_3.py  basic_4.py  basic_4_diagram.py  basic_5.py  basic_6.py  basic_6_diagram.py  basic_7.py  basic_8.py  basic_8_diagram.py  chart_1.py  chart_2.py  chart_3.py  distributed_1.py  distributed_1_diagram.py  distributed_2.py  distributed_2_diagram.py  distributed_3.py  distributed_3_diagram.py  load_balanced_1_diagram.py
brum-php-jan-2022/serverless/charts/: lesser_used_traffic_chart.py  load_1_chart.py  load_2_chart.py  load_3_chart.py  load_balanced_1_chart.py  load_balanced_2_chart.py  load_balanced_3_chart.py  load_balanced_over_time_1_chart.py  load_balanced_over_time_2_chart.py  load_balanced_over_time_3_chart.py  load_balanced_over_time_4_chart.py  load_balanced_startup_chart.py  stable_traffic_chart.py  unstable_traffic_chart.py
brum-php-jan-2022/serverless/diagrams/: basic_1_diagram.py  basic_3_diagram.py  basic_5_diagram.py  basic_7_diagram.py  lambda_1_diagram.py  lambda_2_diagram.py  load_balanced_1_diagram.py  load_balanced_2_diagram.py  load_balanced_3_diagram.py
(+1 files in other folders)
