[tool.poetry]
name = "brum-php-diag"
version = "0.1.0"
description = "Diagrams for poetry"
authors = ["Ryan Lee <rol@bluetel.co.uk>"]
license = "BSD"
readme = "README.md"
packages = [{include = "brum_php_diag"}]

[tool.poetry.dependencies]
python = "^3.9"
diagrams = "^0.23.1"
matplotlib = "^3.6.2"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
